--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,9 +3,10 @@
   <head>
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel="icon" href="../public/favicon.ico" type="image/x-icon">
   </head>
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <h1>Bienvenidos a <%= title %></h1>
+    <p>El portal donde podr&aacute;s crear tus porpios juegos!</p>
   </body>
 </html>
