--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
   <head>
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
-    <link rel="icon" href="../public/favicon.ico" type="image/x-icon">
+	<link rel="icon" href="/public/favicon.ico" type="image/x-icon">
   </head>
   <body>
     <h1>Bienvenidos a <%= title %></h1>
