--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,5 +8,6 @@
   <body>
     <h1>Bienvenidos a <%= title %></h1>
     <p>El portal donde podr&aacute;s crear tus porpios juegos!</p>
+    <p><a href="/quizes/question">Comienza a jugar</a></p>
   </body>
 </html>
