--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,13 +1,2 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-	<link rel="icon" href="/public/favicon.ico" type="image/x-icon">
-  </head>
-  <body>
-    <h1>Bienvenidos a <%= title %></h1>
-    <p>El portal donde podr&aacute;s crear tus porpios juegos!</p>
-    <p><a href="/quizes/question">Comienza a jugar</a></p>
-  </body>
-</html>
+<h3>Bienvenidos a <%= title %></h3>
+&iexcl;El portal donde podr&aacute;s crear tus propios juegos!
