Link a GitHub y corrección del estilo wide.css

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -23,11 +23,13 @@
     </nav>
 
     <section class="main" id="s1">
+      <br>
       <%- body %>
     </section>
 
     <footer class="main" id="f1">
       <a href="http://es.wikipedia.org/wiki/Quiz">&iquest;Qu&eacute; es un Quiz?</a>
+      <p>Conoc&eacute; mi proyecto en GitHub haciendo click <a href="https://github.com/SebaRev1989/quiz-miriadax">aqu&iacute;</a></p>
     </footer>
   </div>
 </body>
