--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -18,8 +18,9 @@
     </header>
 
     <nav class="main" id="n1" role="navigation">
-      <span><a href="/">Inicio</a></span>
-      <span><a href="/quizes/question">Preguntas</a></span>
+      <span><a href="/">Inicio</a></span><br>
+      <span><a href="/quizes/question">Preguntas</a></span><br>
+      <span><a href="/author">Acerca de m&iacute;...</a></span>
     </nav>
 
     <section class="main" id="s1">
