--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -19,7 +19,7 @@
 
     <nav class="main" id="n1" role="navigation">
       <span><a href="/">Inicio</a></span><br>
-      <span><a href="/quizes/question">Preguntas</a></span><br>
+      <span><a href="/quizes">Preguntas</a></span><br>
       <span><a href="/author">Acerca de m&iacute;...</a></span>
     </nav>
 
