--- a/public/stylesheets/wide.css
+++ b/public/stylesheets/wide.css
@@ -6,3 +6,4 @@ nav { float: left; width: 15%; height: 500px; }
 nav span { margin: 0px 100px 0px 0px }
 section { float: right; width: 84.5%; height: 500px; }
 footer { clear: both; display: block; }
+table { margin: 0 auto; z-index: 1; width:50%; }
