--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -3,3 +3,14 @@
 		<tr><td><a href="quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td></tr>
 	<% } %>
 </table>
+<br>
+<form method="get" action="/quizes?search">
+	Buscar preguntas <p>
+    <input type="text" name="search" value="Buscar..."
+    	onfocus="if (this.value === 'Buscar...') {this.value = '';}">
+    <input type="submit" value="Enviar">
+</form>
+<br>
+<form method="get" action="/quizes">
+	<input type="submit" value="Limpiar filtro">
+</form>
