Se agregó la opción para crear preguntas

--- a/public/stylesheets/smartphone.css
+++ b/public/stylesheets/smartphone.css
@@ -5,3 +5,5 @@ body { background: #333; }
 h2 span, section h3 { display: none; }
 body { font-size: xx-large; }
 footer, input { font-size: large; }
+
+.rem { display: none; }
