--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -4,6 +4,8 @@
 	<% } %>
 </table>
 <br>
+<a href="/quizes/new"><button type="button">Crear pregunta</button></a>
+<br><br>
 <form method="get" action="/quizes?search">
 	Buscar preguntas <p>
     <input type="text" name="search" value="Buscar..."
