Validación de las preguntas que se agregan

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -25,6 +25,14 @@
 
     <section class="main" id="s1">
       <br>
+      <% if (errors.length) { %>
+        <span id='ErrorMsgs'>
+          Corregir errores:<br>
+          <% for (var i in errors) { %>
+            <span> <%= errors[i].message %> </span><br>
+          <% } %>
+        </span>
+      <% } %>
       <%- body %>
     </section>
 
