--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -1,6 +1,9 @@
 <table>
 	<% var i; for (i=0; i < quizes.length; i++) { %>
-		<tr><td><a href="quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td></tr>
+		<tr>
+			<td><a href="quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td>
+			<td><a href="quizes/<%= quizes[i].id %>/edit"><button>Editar</button></a></td>
+		</tr>
 	<% } %>
 </table>
 <br>
